--- a/scripts/NzCAS.ipynb
+++ b/scripts/NzCAS.ipynb
@@ -221,7 +221,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f32b82162ce54dea8c0d16aa827f1a00",
+       "model_id": "f3ddeb34bb6b400ea6bd9ac38afa62db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "021e16b4",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
       " -3.17240240e+00-6.92329982e+00j -5.73238090e-03+0.00000000e+00j\n",
       " -4.93097187e-04+7.10697620e-04j -4.93097187e-04-7.10697620e-04j\n",
       " -1.00000000e+00+0.00000000e+00j]\n",
-      "Closed Loop Poles: wn = [-2.03121404e+01+0.00000000e+00j -3.04838065e+00+2.24643523e+00j\n",
+      "Closed Loop Poles: [-2.03121404e+01+0.00000000e+00j -3.04838065e+00+2.24643523e+00j\n",
       " -3.04838065e+00-2.24643523e+00j -7.94352895e-01+0.00000000e+00j\n",
       " -5.13949881e-03+0.00000000e+00j -4.47033220e-04+7.94167229e-04j\n",
       " -4.47033220e-04-7.94167229e-04j -1.00000000e+00+0.00000000e+00j]\n",
@@ -319,7 +319,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3db1ca1d2f484fa7896764e9a6329473",
+       "model_id": "b8c6151931d347c0bd2596a10e602775",
        "version_major": 2,
        "version_minor": 0
       },
