Added Autoland design. Moved jupyter scripts to new folder.

--- a/scripts/examples/NzCAS.ipynb
+++ b/scripts/examples/NzCAS.ipynb
@@ -16,6 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../')\n",
     "from params_f16 import F16Params, Controls\n",
     "from lin_f16 import get_lin_f16 as linearize\n",
     "import control as ct\n",
@@ -221,7 +223,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abd82f578a574dd9b4b695f98c9a3dfb",
+       "model_id": "08b7635124cb4456bfe6118bb3bed0ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -312,14 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "8e8f9816",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2b2df9d75a34fdb9d8785ec30bb2387",
+       "model_id": "0934c716b91b466c849b999fe45ac8d3",
        "version_major": 2,
        "version_minor": 0
       },
