--- a/scripts/examples/Eigenstructure.ipynb
+++ b/scripts/examples/Eigenstructure.ipynb
@@ -29,13 +29,13 @@
     "     [43.223, -0.8693, 0, -17.251, -1.5766], # q\n",
     "     [ 1.341,  0.0067, 0,  0.1689,  0.2518], # gamma\n",
     "     [ 0.000,  0.0000, 0, -20.000,  0.0000], # de\n",
-    "     [ 0.000,  0.0000, 0,  0.0000, -20.000]] # df\n",
+    "     [ 0.000,  0.0000, 0,  0.0000, -20.000],] # df\n",
     "\n",
     "B = [[0,  0],\n",
     "     [0,  0],\n",
     "     [0,  0],\n",
     "     [20, 0],\n",
-    "     [0, 20]]"
+    "     [0, 20],]"
    ]
   },
   {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2b4ca58b",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
     "     [47.76, -0.268, 0, -4.56, 4.45],\n",
     "     [0, 0, 1, 0, 0],\n",
     "     [0, 0, 0, 1, 0],\n",
-    "     [0, 0, 0, 0, 1]]"
+    "     [0, 0, 0, 0, 1],]"
    ]
   },
   {
@@ -82,13 +82,74 @@
    "execution_count": null,
    "id": "b51e71d2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "LinAlgError",
+     "evalue": "Singular matrix",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mLinAlgError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m      5\u001b[39m eigstruct = [[-\u001b[32m1.341\u001b[39m,  \u001b[32m0.9933\u001b[39m, \u001b[32m0\u001b[39m, -\u001b[32m0.1689\u001b[39m, -\u001b[32m0.2518\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m], \u001b[38;5;66;03m# alpha\u001b[39;00m\n\u001b[32m      6\u001b[39m              [\u001b[32m43.223\u001b[39m, -\u001b[32m0.8693\u001b[39m, \u001b[32m0\u001b[39m, -\u001b[32m17.251\u001b[39m, -\u001b[32m1.5766\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m], \u001b[38;5;66;03m# q\u001b[39;00m\n\u001b[32m      7\u001b[39m              [ \u001b[32m1.341\u001b[39m,  \u001b[32m0.0067\u001b[39m, \u001b[32m0\u001b[39m,  \u001b[32m0.1689\u001b[39m,  \u001b[32m0.2518\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m], \u001b[38;5;66;03m# gamma\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     11\u001b[39m              [\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m],\n\u001b[32m     12\u001b[39m              [\u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m],]\n\u001b[32m     14\u001b[39m Ae = np.array(eigstruct)\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlinalg\u001b[49m\u001b[43m.\u001b[49m\u001b[43minv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mAe\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\git\\StevensAndLewis\\SaL\\Lib\\site-packages\\numpy\\linalg\\_linalg.py:669\u001b[39m, in \u001b[36minv\u001b[39m\u001b[34m(a)\u001b[39m\n\u001b[32m    666\u001b[39m signature = \u001b[33m'\u001b[39m\u001b[33mD->D\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m isComplexType(t) \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33md->d\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m    667\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m errstate(call=_raise_linalgerror_singular, invalid=\u001b[33m'\u001b[39m\u001b[33mcall\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    668\u001b[39m               over=\u001b[33m'\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m'\u001b[39m, divide=\u001b[33m'\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m'\u001b[39m, under=\u001b[33m'\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m669\u001b[39m     ainv = \u001b[43m_umath_linalg\u001b[49m\u001b[43m.\u001b[49m\u001b[43minv\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignature\u001b[49m\u001b[43m=\u001b[49m\u001b[43msignature\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    670\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m wrap(ainv.astype(result_t, copy=\u001b[38;5;28;01mFalse\u001b[39;00m))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\git\\StevensAndLewis\\SaL\\Lib\\site-packages\\numpy\\linalg\\_linalg.py:163\u001b[39m, in \u001b[36m_raise_linalgerror_singular\u001b[39m\u001b[34m(err, flag)\u001b[39m\n\u001b[32m    162\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_raise_linalgerror_singular\u001b[39m(err, flag):\n\u001b[32m--> \u001b[39m\u001b[32m163\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m LinAlgError(\u001b[33m\"\u001b[39m\u001b[33mSingular matrix\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mLinAlgError\u001b[39m: Singular matrix"
+     ]
+    }
+   ],
+   "source": [
+    "D1 = [[1, 0, 0, 0, 0],\n",
+    "      [0, 1, 0, 0, 0],\n",
+    "      [0, 0, 1, 0, 0]]\n",
+    "\n",
+    "eigstruct = [[-1.341,  0.9933, 0, -0.1689, -0.2518, 0, 0, 0], # alpha\n",
+    "             [43.223, -0.8693, 0, -17.251, -1.5766, 0, 0, 0], # q\n",
+    "             [ 1.341,  0.0067, 0,  0.1689,  0.2518, 0, 0, 0], # gamma\n",
+    "             [ 0.000,  0.0000, 0, -20.000,  0.0000, 20, 0, 0], # de\n",
+    "             [ 0.000,  0.0000, 0,  0.0000, -20.000, 0, 20, 0],\n",
+    "             [1, 0, 0, 0, 0, 0, 0, 0],\n",
+    "             [0, 1, 0, 0, 0, 0, 0, 0],\n",
+    "             [0, 0, 1, 0, 0, 0, 0, 0],]\n",
+    "\n",
+    "Ae = np.array(eigstruct)\n",
+    "np.linalg.inv(Ae)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "28b29587",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-4.2590e+00+4.2j, -9.9330e-01+0.j , -0.0000e+00+0.j ,\n",
+       "         1.6890e-01+0.j ,  2.5180e-01+0.j ],\n",
+       "       [-4.3223e+01+0.j , -4.7307e+00+4.2j, -0.0000e+00+0.j ,\n",
+       "         1.7251e+01+0.j ,  1.5766e+00+0.j ],\n",
+       "       [-1.3410e+00+0.j , -6.7000e-03+0.j , -5.6000e+00+4.2j,\n",
+       "        -1.6890e-01+0.j , -2.5180e-01+0.j ],\n",
+       "       [-0.0000e+00+0.j , -0.0000e+00+0.j , -0.0000e+00+0.j ,\n",
+       "         1.4400e+01+4.2j, -0.0000e+00+0.j ],\n",
+       "       [-0.0000e+00+0.j , -0.0000e+00+0.j , -0.0000e+00+0.j ,\n",
+       "        -0.0000e+00+0.j ,  1.4400e+01+4.2j]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = -5.6 + 4.2j\n",
+    "l1*np.eye(5) - np.array(A)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "f16",
+   "display_name": "SaL",
    "language": "python",
    "name": "python3"
   },
@@ -102,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
