--- a/scripts/examples/NzCAS.ipynb
+++ b/scripts/examples/NzCAS.ipynb
@@ -11,19 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3befa304",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
-    "from params_f16 import F16Params, Controls\n",
-    "from lin_f16 import get_lin_f16 as linearize\n",
+    "from model.params_f16 import F16Params, Controls\n",
+    "from tools.lin_f16 import get_lin_f16 as linearize\n",
     "import control as ct\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import control_tools as tools"
+    "import tools.control_tools as tools"
    ]
   },
   {
